--- a/Greeting/pom.xml
+++ b/Greeting/pom.xml
@@ -23,7 +23,7 @@
                 <configuration>
                     <skipTests>false</skipTests>
                     <excludes>
-                        <exclude>**/*GreetingTester.java</exclude>
+                        <exclude>**/*IntegrationTest.java</exclude>
                     </excludes>
                 </configuration>
                 <executions>
@@ -38,7 +38,7 @@
                                 <exclude>none</exclude>
                             </excludes>
                             <includes>
-                                <include>**/*GreetingTester.java</include>
+                                <include>**/*IntegrationTest.java</include>
                             </includes>
                         </configuration>
                     </execution>
