--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: java
-before_script: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+before_script: mvn install -DskipTests=false -Dmaven.javadoc.skip=false -B -V
 script: mvn verify package
 
