--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
 language: java
-before_script: mvn install -DskipTests=false -Dmaven.javadoc.skip=false -B -V
-script: mvn verify package
+script: mvn verify package -Dtest=IntegretionTest
 
