--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                         <suiteXmlFiles>
+                        <suiteXmlFile>**/*TEST-IntegrationTest.xml</suiteXmlFile>
+                    </suiteXmlFiles>
                     <skipTests>false</skipTests>
                     <excludes>
                         <exclude>**/*IntegrationTest.java</exclude>
