--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                         <suiteXmlFiles>
-                        <suiteXmlFile>**/*TEST-IntegrationTest.xml</suiteXmlFile>
-                    </suiteXmlFiles>
+              
                     <skipTests>false</skipTests>
                     <excludes>
-                        <exclude>**/*IntegrationTest.java</exclude>
+                        <exclude>**/IntegrationTest.java</exclude>
                     </excludes>
                 </configuration>
                 <executions>
@@ -41,7 +39,7 @@
                                 <exclude>none</exclude>
                             </excludes>
                             <includes>
-                                <include>**/*IntegrationTest.java</include>
+                                <include>**/IntegrationTest.java</include>
                             </includes>
                         </configuration>
                     </execution>
