--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
               
                     <skipTests>false</skipTests>
                     <excludes>
-                        <exclude>**/IntegrationTest.java</exclude>
+                        <exclude>src/test/IntegrationTest.java</exclude>
                     </excludes>
                 </configuration>
                 <executions>
@@ -39,7 +39,7 @@
                                 <exclude>none</exclude>
                             </excludes>
                             <includes>
-                                <include>**/IntegrationTest.java</include>
+                                <include>src/test/IntegrationTest.java</include>
                             </includes>
                         </configuration>
                     </execution>
